k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: java-app
  labels:
    app: runnerdb
    managed-by: kubectl
