k8s/app-deployment-green.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: runnerdb-green
  namespace: java-app
  labels:
    app: runnerdb
    slot: green
spec:
  replicas: 2
  selector:
    matchLabels:
      app: runnerdb
      slot: green
  template:
    metadata:
      labels:
        app: runnerdb
        slot: green
    spec:
      containers:
        - name: runnerdb
          image: docker.io/mariuslita/runnerdb:2.0   # pipeline overwrites this tag
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
              ephemeral-storage: "1Gi"
            limits:
              cpu: "500m"
              memory: "512Mi"
              ephemeral-storage: "1Gi"
          startupProbe:
            httpGet:
              path: /
              port: 8080
            failureThreshold: 18         # up to 3 min to start (18 x 10s)
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 0
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 0
            periodSeconds: 15
            failureThreshold: 3
