k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: runnerdb-ingress
  namespace: java-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /runnerdb(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: runnerdb-active   # never changes
                port:
                  number: 80
